--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "azur84",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.13.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
