--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "discord.js": "^14.13.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": "^10.x"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.42",
+    "@vercel/node": "^2.9.6",
+    "typescript": "^4.7.3"
   }
 }
