--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "azur84",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.13.0",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": "^18.x"
