--- a/package.json
+++ b/package.json
@@ -10,15 +10,6 @@
   "author": "azur84",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.13.0",
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": "^18.x"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.42",
-    "@vercel/node": "^2.9.6",
-    "typescript": "^4.7.3"
+    "discord.js": "^14.13.0"
   }
 }
